overflow on herosection fix

--- a/css/ui.css
+++ b/css/ui.css
@@ -193,6 +193,7 @@ input[type="checkbox"]:checked ~ span:nth-of-type(3) {
   align-content: center;
   justify-content: center;
   position: relative;
+  overflow: hidden;
 }
 
 .hero-content {
